[package]
name = "berbalang-test-runner"
version = "0.1.0"
authors = ["Daniel Kuehn <daniel@kuehn.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "~0.5.5"
serde = { version = "~1.0", features = ["derive"] }
